# tree-txt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
Formula/: tree-txt.rb
packaging/: PKGBUILD
src/: config.rs  error.rs  file_selector.rs  lib.rs  main.rs  output_generator.rs  state_manager.rs
