[package]
name = "tree-txt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
owo-colors = "4.2.2"
ptree = "0.5.2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
