[package]
name = "tree-txt"
version = "0.1.0"
edition = "2024"
authors = ["Mirza Bicer"]
description = "Interactive file selector and codebase exporter - Generate beautiful, formatted text files from your project structure with an intuitive terminal interface"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dev-mirzabicer/tree-txt"
repository = "https://github.com/dev-mirzabicer/tree-txt"
documentation = "https://docs.rs/tree-txt"
keywords = ["cli", "terminal", "tui", "file-selector", "codebase"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
  "target/",
  ".git/",
  ".gitignore",
  "*.tmp",
  "*.bak",
  "/tmp/",
  "/test-data/",
]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
owo-colors = "4.2.2"
ptree = "0.5.2"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
